--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,26 @@ ul li{
      text-decoration: none;
  }
 
+ .home{
+     position: absolute;
+     bottom: 0;
+     background-color: rgb(247, 123, 77); 
+     padding: .6rem .8rem;
+     border: none;
+     border-radius: 1rem;
+     font-size: 1rem;
+     font-weight: 600;
+     
+ }
+
+ .back a{
+     list-style: none;
+     color:white;
+     text-decoration: none;
+
+    
+ }
+
 
  @media  screen and {
      
